--- a/page2.css
+++ b/page2.css
@@ -27,6 +27,39 @@ article a{
     text-decoration: none; 
 }
 
+h3{
+    font-family: Source Sans Pro;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-bottom: 10px;
+    }
+    
+    p{
+        font-family: Source Sans Pro;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    
+    }
+    
+    
+    .headertext {
+        font-family: Source Sans Pro;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0em;
+        text-align: left;
+        font-weight: 700;
+        margin-bottom: -10px; /* Adjust the margin-bottom value as needed */
+      }
+      
+
 .hero-link p {
     padding: 0.9375rem 0; 
 }
@@ -71,8 +104,9 @@ article a{
     margin-right: -50px;
 }
 
-.home-lint {
-    margin-top: 0.5em;
+.content-two {
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .site-logo {
@@ -97,14 +131,27 @@ h1 {
     font-family: 'Roboto', sans-serif;
 }
 
-.logo {
-    display: flex;
-    width: 140px;
-    top: 17px;
-    left: 20px;
-    cursor: pointer;
-    align-items: center;
-}
+h2{
+    font-family: Source Sans Pro;
+    font-size: 2.25rem;
+    font-weight: 700;
+    line-height: 39px;
+    letter-spacing: -0.03em;
+    text-align: left;
+  
+    
+    }
+
+    h3{
+        font-family: Source Sans Pro;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 26px;
+        letter-spacing: 0em;
+        text-align: center;
+        margin-bottom: 10px;
+        }
+        
 
 a {
     margin-top: 16px;
@@ -115,7 +162,9 @@ a {
     letter-spacing: 0em;
 }
 
-
+.date{
+    color: #505050;
+}
 .article-date-hero {
     font-family: 'Source Sans 3', sans-serif;
     font-size: 0.75rem;
@@ -188,14 +237,11 @@ a {
     background-size: cover;
     cursor: pointer;
 }
-
 .container {
-    width: 90%;
-    max-width: 900px;
+   
+    max-width: 75%;
     padding-top: 1.5em;
-    margin: 0 auto;
 }
-
 article {
     margin-bottom: 1em;
 }
@@ -204,9 +250,12 @@ img {
     width: 100%;
 }
 
+
 .article-info {
+    display: block;
+    margin: -5px 0;
     text-transform: uppercase;
-}
+  }
 
 .article-img {
     margin-bottom: 1em;
@@ -223,14 +272,43 @@ img {
     margin-left: -1.125rem;
 }
 
+.article-preview, 
+.article-info {
+    font-weight: normal;
+    font-family: Source Sans Pro;
+font-size: 1rem;
+font-weight: 400;
+line-height: 20px;
+letter-spacing: 0em;
+text-align: left;
+color: #505050;
+
+
+}
+
+.article-img {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .article-img:hover {
+      transform: scale(1.02);
+    }
+
 p {
     line-height: 1.3;
+    font-family: Source Sans Pro;
+font-size: 16px;
+font-weight: 400;
+line-height: 20px;
+letter-spacing: 0em;
+text-align: left;
+
 }
 
 
 footer {
     width: 414px;
-    height: 100px;
+    height: 200px;
     top: 1662px;
     background-color: #202020;
 }
@@ -243,7 +321,7 @@ footer {
     letter-spacing: -0.03em;
     text-align: center;
     color: #ECECEC;
-    padding-top: 30px;
+    padding-top: 20px;
     text-align: center;
 }
 
@@ -259,22 +337,32 @@ footer {
     text-align: center;
 }
 
+
 .content {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     margin-left: auto;
     margin-right: auto;
     max-width: 80%;
+   
+
 }
+
+
+.container {
+    display: flex;
+    justify-content: flex-end;
+  }
 
 
 
 .content p,
 .content h2 {
-    padding: 5px 20px; /* Adjust the padding values as needed */
+    padding: 10px 20px; /* Adjust the padding values as needed */
     margin: 0;
 }
+
+
 
 h3{
     margin: 0 auto;
@@ -301,6 +389,27 @@ h3{
 }
   
   
+@media (min-width: 600px) {
+    .logo {
+        color: black;
+        text-decoration: none;
+        position: relative;
+      
+        display: flex;
+        padding-left: 10%;
+      }
+    
+      #poop{
+    
+        color: black;
+        text-decoration: none;
+        position: relative;
+        cursor: pointer;
+        display: flex;
+        margin-right: 10%;
+      }
+    
+    }
 
 /* -------------------------------------------------------------------------------------------------- */
 @media (min-width: 400px) {
@@ -310,6 +419,14 @@ h3{
         flex-wrap: wrap;
         gap: 1em;
     }
+
+    .logo {
+        color: black;
+        text-decoration: none;
+        position: relative;
+        display: flex;
+       
+      }
 
     .posts article {
         flex: 1 220px;
@@ -358,12 +475,7 @@ h3{
         font-family: 'Roboto', sans-serif;
     }
 
-    .logo {
-        display: flex;
-        width: 140px;
-        top: 17px;
-        left: 20px;
-    }
+ 
 
     a {
         margin-top: 16px;
@@ -411,6 +523,14 @@ h3{
         background-color: white;
         display: flex;
         justify-content: space-between;
+    }
+
+
+    .logo {
+        display: flex;
+        width: 140px;
+        top: 17px;
+        left: 20px;
     }
 
     .article-preview-hero {
